feat: update CORS and API endpoint configurations
- Added CORS_ORIGINS environment variable to both docker-compose files for improved cross-origin requests.
- Updated MCP server URLs in README to reflect new port configuration.
- Enhanced API URL handling in frontend to accommodate Docker Hub setup with dynamic port mapping.
- Introduced a new function to manage MCP endpoint URLs based on the environment.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -106,6 +106,8 @@ jobs:
           file: apps/frontend/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            VITE_API_URL=http://localhost:9631
           tags: |
             dxheroes/local-mcp-gateway-frontend:latest
             dxheroes/local-mcp-gateway-frontend:${{ steps.version.outputs.date }}-${{ steps.version.outputs.sha }}
