--- a/docker-compose.hub.yml
+++ b/docker-compose.hub.yml
@@ -21,6 +21,7 @@ services:
       - NODE_ENV=production
       - DATABASE_URL=file:/data/local-mcp-gateway.db
       - LOG_LEVEL=log
+      - CORS_ORIGINS=http://localhost:9630,http://localhost:3000,http://localhost:5173
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
