--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - NODE_ENV=production
       - DATABASE_URL=file:/data/local-mcp-gateway.db
       - LOG_LEVEL=log
+      - CORS_ORIGINS=http://localhost:3000,http://localhost:5173
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
       interval: 30s
